<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        tools:context="com.example.android.quiz.MainActivity"
        style="@style/TextViewWrap">
        <TextView
            android:visibility="gone"
       style="@style/TextViewWrap"
        android:text="@string/result"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/resultSize"
        android:id="@+id/result"
        />
        <TextView
            style="@style/TextViewWrap"
            android:layout_below="@+id/result"
            android:layout_marginTop="@dimen/marginTopofTile"
            android:id="@+id/tile"
            android:layout_marginStart="@dimen/marginleft"
            android:layout_marginEnd="@dimen/marginRight"
            />
    <TextView
       style="@style/TextViewWrap"
        android:layout_centerVertical="true"
        android:id="@+id/rightOnes"
        android:layout_below="@+id/tile"
        android:layout_marginStart="@dimen/marginleft"
        />
        <TextView
            style="@style/TextViewWrap"
            android:layout_below="@+id/rightOnes"
            android:id="@+id/rightOnesCount"
            android:layout_marginStart="@dimen/marginLeftBigger"
            android:textColor="@color/colorAccent"
            />
        <TextView
           style="@style/TextViewWrap"
            android:id="@+id/wrongOnes"
            android:layout_below="@+id/tile"
            android:layout_toEndOf="@+id/rightOnes"
            android:layout_marginStart="@dimen/marginLeftSmaller"
            />
        <TextView
            style="@style/TextViewWrap"
            android:layout_below="@+id/wrongOnes"
            android:layout_marginStart="@dimen/marginleft"
            android:layout_toEndOf="@+id/rightOnes"
            android:id="@+id/wrongCount"
            android:textColor="@color/colorAccent"
            />
   <ImageView
         android:layout_width="@dimen/Imagesize"
         android:layout_height="@dimen/Imagesize"
         android:src="@drawable/rules"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/marginTopofImage"
        android:id="@+id/image"
        android:layout_centerHorizontal="true"/>
     <TextView
       style="@style/TextViewWrap"
         android:layout_marginTop="@dimen/marginTopofText"
         android:textSize="@dimen/Textsize"
         android:id="@+id/question"
         android:layout_below="@+id/image"
         android:layout_toEndOf="@dimen/marginRight"
         android:layout_marginStart="@dimen/marginleft"
         />
         <EditText
             style="@style/WMatchHMatch"
             android:textColor="@color/colorAccent"
             android:id="@+id/editText"
             android:visibility="gone"
             android:layout_below="@+id/goforward"
             />
        <Button
        style="@style/WMatchHMatch"
        android:layout_below="@+id/question"
        android:id="@+id/goforward"
        android:text="@string/Begin"
            android:layout_marginBottom="@dimen/marginBottomofButton"
        />
        <LinearLayout
            android:layout_below="@+id/goforward"
            style="@style/TextViewWrap"
            android:id="@+id/radiogroupLayout"
            android:layout_centerHorizontal="true">
        <com.devprovider.customview.ToggleButtonGroupTableLayout
            style="@style/TextViewWrap"
            android:visibility="gone"
            android:id="@+id/radiogoup"
            android:layout_gravity="center">
            <TableRow>
                <RadioButton android:id="@+id/Belgium"
                    android:paddingBottom="4dp"
                    android:text="@string/Radiobutton1"
                    style="@style/TextViewWrap" />
                <RadioButton android:id="@+id/Lithuania"
                    android:text="@string/Radiobutton2"
                    style="@style/TextViewWrap"
                    android:paddingBottom="4dp"/>
            </TableRow>
            <TableRow>
                <RadioButton android:id="@+id/Mexico"
                    android:text="@string/Radiobutton3"
                    android:paddingBottom="4dp"
                    style="@style/TextViewWrap"/>
                <RadioButton android:id="@+id/Slovakia"
                    android:text="@string/Radiobutton4"
                    android:paddingBottom="4dp"
                    style="@style/TextViewWrap" />
            </TableRow>
        </com.devprovider.customview.ToggleButtonGroupTableLayout></LinearLayout>
        <LinearLayout
           style="@style/CheckBoxLayout"
            android:id="@+id/checkboxlayout"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_below="@+id/goforward">
        <LinearLayout
            style="@style/CheckBoxLayout"
            >
        <CheckBox
            android:id="@+id/ch1"
            android:text="@string/BRIAN_MAY"
            style="@style/CheckBox"
        />
        <CheckBox
            android:id="@+id/ch2"
            android:text="@string/ANGUS_YOUNG"
            style="@style/CheckBox"/>
        </LinearLayout>
            <LinearLayout
                style="@style/CheckBoxLayout">
                <CheckBox
                    style="@style/CheckBox"
                    android:text="@string/ROGER_TAYLOR"
                    android:id="@+id/ch3" />
                <CheckBox
                    android:text="@string/CHRIS_SLADE"
                    android:id="@+id/ch4"
                    style="@style/CheckBox"/>
            </LinearLayout>
        </LinearLayout>
     </RelativeLayout>
    </ScrollView>